variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:9: error: value elif is not a member of Unit
possible cause: maybe a semicolon is missing before `value elif'?
  } elif (estSurBiscuit) {
    ^RunHalf:9: error: too many arguments for method estSurBiscuit: ()Boolean
  } elif (estSurBiscuit) {
                         ^