variables.RunHalf.scala.code
var biscuits = 0
var caseOrange = 0

while (2*biscuits != caseOrange +1) {
  avance();
  
  if (estSurOrange) {
    caseOrange += 1
  } elif (estSurBiscuit) {
    biscuits += 1
  }
}